--- a/less/content.less
+++ b/less/content.less
@@ -121,19 +121,13 @@ section {
     }
     #block-system-main {
       article {
-        p, h1, h2, h3, h4, h5, h6, ul, ol, dl, blockquote, time, .addthis_sharing_toolbox {
           margin-left: 80px;
           margin-right: 80px;
-        }
         p {
           img {
             .responsive-img;
             margin-left: 0px;
           }
-        }
-        p.fullwidth {
-          margin-left: 0;
-          margin-right: 0;
         }
       }
     }
