--- a/less/header.less
+++ b/less/header.less
@@ -124,9 +124,18 @@
         }
       }
     }
-    #block-search-form #edit-actions {
-      margin-bottom: 0;
+    #block-search-form {
+      width: 212px;
+      #edit-actions {
+        margin-bottom: 0;
+      }
     }
+  }
+}
+
+@media @wide {
+  #block-search-form {
+    width: 262px !important;
   }
 }
 
